# iterative-qa

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README_zh.md  RELEASE_GUIDE.md  SKILL.md  USER_GUIDE_en.md  USER_GUIDE_zh.md  agent_config.yaml  iterative_qa.yaml  push-safe.ps1  pyproject.toml  requirements.txt  setup.py  skill.yaml
codespect_matrix/: __init__.py  cli.py  core.py  evolution.py  fix_engine.py  llm_service.py  models.py  report_generator.py  scanner.py
codespect_matrix/agents/: __init__.py  base.py  bus.py  cpg_analyzer.py  dynamic_agents.py  harness.py  healthcare_rules.py  llm_agents.py  llm_judge.py  memory.py  orchestrator.py  rule_agents.py
docs/: article.md  codespect-matrix-report.html
iterative_qa/: __init__.py  cli.py  core.py  llm_service.py  models.py  scanner.py
iterative_qa/perspectives/: __init__.py
locales/en/: messages.json
locales/zh/: messages.json
tests/: test_agents.py  test_evolution.py  test_fix_engine.py  test_orchestrator.py
