[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iterative-qa"
version = "3.0.0"
description = "AI驱动的智能多视角质量校验引擎 - 通过大模型分析项目特征，动态识别最优验证视角，实现精准的多维度质量审计与工程优化"
readme = "README.md"
license = "MIT"
authors = [
    { name = "周良", email = "zhouliang@shsmu.edu.cn" }
]
maintainers = [
    { name = "周良", email = "zhouliang@shsmu.edu.cn" }
]
keywords = ["qa", "quality", "testing", "validation", "AI", "LLM", "code-quality", "healthcare"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.7.0",
    "langchain>=0.1.10",
    "langchain-openai>=0.1.0",
    "langchain-core>=0.1.0",
    "openai>=1.13.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.20.0"]
google = ["google-generativeai>=0.3.0"]
baidu = ["qianfan>=0.1.0"]
tongyi = ["dashscope>=1.0.0"]
zhipu = ["zhipuai>=2.0.0"]
huggingface = ["transformers>=4.37.0", "torch>=2.1.0"]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.10.0",
    "vulture>=2.10.0",
]

[project.scripts]
iterative-qa = "iterative_qa.cli:main"

[project.urls]
"Homepage" = "https://github.com/zhouliang-sjtu/iterative-qa"
"Documentation" = "https://github.com/zhouliang-sjtu/iterative-qa/blob/main/README.md"
"Bug Tracker" = "https://github.com/zhouliang-sjtu/iterative-qa/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["iterative_qa", "iterative_qa.*"]

[tool.setuptools.package-data]
iterative_qa = ["*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
disallow_untyped_defs = true
disallow_incomplete_defs = true