[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codespect-matrix"
version = "4.0.0"
description = "codespect-matrix — Multi-Agent Code Evolution Platform · CPG Taint Analysis · 10-Stage Pipeline · Debate Review · Health Scoring"
readme = "README.md"
license = "MIT"
authors = [
    { name = "周良", email = "zhouliang@shsmu.edu.cn" }
]
maintainers = [
    { name = "周良", email = "zhouliang@shsmu.edu.cn" }
]
keywords = ["qa", "quality", "testing", "validation", "code-review", "ci-cd", "risk-scoring", "healthcare", "phi", "privacy", "llm", "ai", "multi-agent", "agent", "evolution", "debate-review", "tech-debt"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps",
]
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.7.0",
    "langchain>=0.1.10",
    "langchain-openai>=0.1.0",
    "langchain-core>=0.1.0",
    "openai>=1.13.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.20.0"]
google = ["google-generativeai>=0.3.0"]
baidu = ["qianfan>=0.1.0"]
tongyi = ["dashscope>=1.0.0"]
zhipu = ["zhipuai>=2.0.0"]
huggingface = ["transformers>=4.37.0", "torch>=2.1.0"]
lint = ["ruff>=0.4.0", "flake8>=7.0.0", "pylint>=3.2.0", "mypy>=1.10.0"]
test = ["pytest>=8.2.0", "pytest-asyncio>=0.23.0", "pytest-cov>=5.0.0"]
security = ["pip-audit>=2.7.0", "bandit>=1.7.0"]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pip-audit>=2.7.0",
]

[project.scripts]
codespect-matrix = "codespect_matrix.cli:main"

[project.urls]
"Homepage" = "https://github.com/zhouliang-sjtu/codespect-matrix"
"Documentation" = "https://github.com/zhouliang-sjtu/codespect-matrix/blob/main/README.md"
"Bug Tracker" = "https://github.com/zhouliang-sjtu/codespect-matrix/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["codespect_matrix", "codespect_matrix.*"]

[tool.setuptools.package-data]
codespect_matrix = ["*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
